refactor: apply IntelliJ inspection cleanups in the Yahoo mapper
Math.clamp + List.addFirst, fix the javadoc paragraph break, and drop the
redundant null checks against the @Nonnull generated getters.